/*
 * Buildscript.
 *
 * Ahn Yubin / 202021088
 */

// Since we're using jib, we have to make it ignore spring boot + docker plugin with this filter.
buildscript {
    dependencies {
        classpath('com.google.cloud.tools:jib-layer-filter-extension-gradle:0.3.0')
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
    // Use jib plugin to create Docker image for easier/consistent deployment.
    id 'com.google.cloud.tools.jib' version '3.5.3'
}

def profile = System.getProperty("spring.profiles.active")
group = 'team2.mse.ajou'
version = '0.0.1-SNAPSHOT'
description = 'ajou-mse-server'

// jib setup
jib {
    to {
        // dev/prod server distinction
        if (profile == "dev") {
            image = 'ajou-mse/server-dev'
        } else {
            image = 'ajou-mse/server'
        }
    }

    container {
        if (profile == "dev") {
            ports = ['8088/tcp']
            jvmFlags = ['-Duser.timezone=Asia/Seoul', '-Dspring.profiles.active=dev']
        } else {
            ports = ['8080/tcp']
            jvmFlags = ['-Duser.timezone=Asia/Seoul']
        }
        environment = [TZ: 'Asia/Seoul']
    }

    // jib: ignore docker compose plugin. since we're "manually" running docker on CI/CD.
    pluginExtensions {
        pluginExtension {
            implementation = 'com.google.cloud.tools.jib.gradle.extension.layerfilter.JibLayerFilterExtension'
            configuration {
                filters {
                    filter {
                        glob = '**/spring-boot-docker-compose-*.jar'
                    }
                }
            }
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // firebase
    implementation 'com.google.firebase:firebase-admin:9.8.0'

//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
//    testImplementation 'org.testcontainers:mysql'
    compileOnly 'org.projectlombok:lombok'
//    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
//    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
}

tasks.named('test') {
    useJUnitPlatform()
}

// Generate secret files for Docker.
tasks.register('generateDockerSecrets') {
    doLast {
        def dir = layout.buildDirectory.get().asFile
        dir.mkdirs()

        def mysql_root_password = "test"
        def mysql_username = "test"
        def mysql_password = "test"

        def props = new Properties()
        //props.load(project.rootProject.file("src/main/resources/application-secrets.properties").newReader())

        if (profile != null && profile.contains("dev")) {
            props.load(project.rootProject.file("src/main/resources/application-secrets-dev.properties").newReader())
        } else {
            props.load(project.rootProject.file("src/main/resources/application-secrets.properties").newReader())
        }

        mysql_username = props.getProperty("spring.datasource.username", mysql_username)
        mysql_password = props.getProperty("spring.datasource.password", mysql_password)

        new File(dir, "mysql_root_password.txt").text = mysql_root_password
        new File(dir, "mysql_user.txt").text = mysql_username
        new File(dir, "mysql_password.txt").text = mysql_password
    }
}

tasks.named('classes').configure {
    dependsOn 'generateDockerSecrets'
}